# Inazuma

./: .envrc  .gitignore  README.md  inazuma.spec  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pyinstaller.yml
inazuma/: __init__.py  __main__.py  inazuma.ini
inazuma/Controller/: anime_screen.py  home_screen.py  search_screen.py
inazuma/Model/: anime_screen.py  home_screen.py  my_list_screen.py  search_screen.py
inazuma/Utility/: media_card_loader.py  utils.py
inazuma/View/: screens.py
inazuma/View/AnimeScreen/: anime_screen.kv  anime_screen.py
inazuma/View/HomeScreen/: home_screen.py
inazuma/View/SearchScreen/: search_screen.py
inazuma/View/components/media_card/: __init__.py  media_card.py
inazuma/controller/: anime_screen.py  downloads_screen.py  home_screen.py  my_list_screen.py  search_screen.py
inazuma/core/: viu.py
inazuma/model/: anime_screen.py  download_screen.py  home_screen.py  my_list_screen.py  search_screen.py
inazuma/view/: base_screen.py  screens.py
inazuma/view/AnimeScreen/: anime_screen.kv  anime_screen.py
inazuma/view/DownloadsScreen/: download_screen.kv  download_screen.py
inazuma/view/DownloadsScreen/components/: task_card.kv  task_card.py
inazuma/view/HomeScreen/: home_screen.py
inazuma/view/MylistScreen/: my_list_screen.kv  my_list_screen.py
inazuma/view/SearchScreen/: search_screen.kv  search_screen.py
inazuma/view/SearchScreen/components/: filters.kv  filters.py
inazuma/view/components/: top_app_bar.kv
inazuma/view/components/auth_modal/: __init__.py  auth_popup.kv  (+1 more)
(+4 files in other folders)
